--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend for the project management app",
   "main": "index.js",
   "scripts": {
-    "test": "node"
+  "start": "node index.js",
+  "dev": "nodemon index.js"
   },
   "keywords": [
     "node"
@@ -13,10 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
+    "nodemailer": "^7.0.11",
+    "svix": "^1.81.0",
     "zod": "^4.1.13"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
