--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "nodemailer": "^7.0.11",
+    "socket.io": "^4.8.1",
     "svix": "^1.81.0",
     "zod": "^4.1.13"
   },
